# py_better_diff

./: .gitignore  pyproject.toml
.github/: CODEOWNERS  Release.yml
.github/workflows/: Release.yml
_docs_conf/: conf.py  index.rst
_docs_conf/_templates/autoapi/python/: class.rst
better_diff/: __init__.py  unified_plus.py
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
docs/.doctrees/autoapi/: index.doctree
docs/.doctrees/autoapi/better_diff/: index.doctree
docs/_modules/: index.html
docs/_modules/better_diff/: unified_plus.html
docs/_sources/autoapi/: index.rst.txt
docs/_sources/autoapi/better_diff/: index.rst.txt
docs/autoapi/: index.html
docs/autoapi/better_diff/: index.html
docs/autoapi/better_diff/unified_plus/: index.html
tests/: __init__.py
tests/component/: test_unified_plus_print.py
tests/component/test_cases/blank_line_and_empty_file/: expected.diff
tests/component/test_cases/case_with_missing_newline_at_end_of_original_file/: expected.diff
tests/component/test_cases/case_with_missing_trailing_whitespace/: a.txt  expected.diff
tests/component/test_cases/empty_file_and_blank_line/: expected.diff
tests/component/test_cases/file_with_multiple_white_space_trims_in_a_row/: a.txt  b.txt  expected.diff
tests/component/test_cases/files_that_differ_with_newlines_at_the_end/: b.txt  expected.diff
tests/component/test_cases/simple_trailing_white_space_in_middle/: a.txt  (+1 more)
tests/unit/: test_unified_plus_format.py
(+2 files in other folders)
