[tool.poetry]
name = "better_diff"
version = "0.1.0"
description = "A simple library for printing better diffs based on the stdlib unified_diff format."
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"

[tools.black]
line-length=100

[tool.poetry.group.dev.dependencies]
ni-python-styleguide = "^0.4.6"
mypy = "^1.13.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-snapshot = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
